--- a/index.html
+++ b/index.html
@@ -3,125 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
-
-        body {
-            padding: 0;
-            margin: 0;
-            background-color:  #130A58;
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-            background-image: url('diagnols.png');
-        }
-
-        body:after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            right: 0;
-            z-index: 0;
-            opacity: .4;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 40px;
-            font-weight: bold;
-            font-family: 'Open-Sans', arial, sans-serif;
-            color: white;
-            line-height: 1;
-            padding-top: 15px;
-            margin: 45px !important;
-        }
-
-        .content {
-            padding: 0 25px 25px 25px;
-        }
-
-        .banner {
-            align-items: center;
-            background-image: url('2020-banner_2.jpg');
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            height: 190px;
-            justify-content: center;
-            width: 100%;
-        }
-
-        .pod-container {
-            justify-content: center;
-            display: flex;
-            flex-wrap: wrap;
-            position: relative;
-            z-index: 1;
-        }
-
-        .pod {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        .pod__industry {
-            font-family: 'Open-Sans', arial, sans-serif;
-            font-size: 24px;
-            color: #130A59;
-            font-weight: 600;
-            line-height: 1.4;
-            margin: 0 40px;
-
-        }
-
-        .pod__link {
-            text-decoration: none;
-            display: block;
-            border-radius: 5px;
-            box-sizing: border-box;
-            box-shadow: 0 5px 0 rgba(0, 0, 0, .5);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            flex-basis: calc(50% - 50px);
-            margin: 20px;
-            background-color: white;
-            height: 120px;
-        }
-
-        .footer {
-            height: 100px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .header-logo {
-            width: 350px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <div class="banner">
-        <img src="marqeta-logo-white.svg" width="450" class="header-logo" />
+        <img src="assets/marqeta-logo-white.svg" width="450" class="banner-logo" />
     </div>
 
     <div class="content">
         <h1 style="margin: 30px;">View Our Solutions</h1>
         <div class="pod-container">
-            <a class="pod__link" href="online-retail/index.html">
+            <a class="pod__link" href="diva/index.html">
                 <div class="pod">
                     <span class="pod__industry">Data Analytics</span>
                 </div>
