--- a/diva/index.html
+++ b/diva/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" type="text/css" href="../video.css">
 </head>
 <body>
-    <video width="100%" height="auto" controls>
-        <source src="test.mp4" type="video/mp4">
-      </video>
+    <video loop autoplay controls="true" width='100%' height='100%' src='test.mp4' type='video/mp4'></video>
 </body>
 </html>
