--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span class="pod__industry">Data Analytics</span>
                 </div>
             </a>
-            <a class="pod__link" href="online-retail/index.html">
+            <a class="pod__link" href="pos/index.html">
                 <div class="pod">
                     <span class="pod__industry">Incentives</span>
                 </div>
@@ -32,7 +32,7 @@
                     <span class="pod__industry">On-Demand Delivery</span>
                 </div>
             </a>
-            <a class="pod__link" href="online-retail/index.html">
+            <a class="pod__link" href="or/index.html">
                 <div class="pod">
                     <span class="pod__industry">Online Retail</span>
                 </div>
