--- a/dc/index.html
+++ b/dc/index.html
@@ -64,7 +64,7 @@
 	ng-style="bodyStyle">
 		<a class="back-link" href="../index.html">
 		<div class="back-button">
-			<img src="../back-button.svg">
+			<img src="../assets/back-button.svg">
 		</div>
 	</a>
 
