--- a/pos/index.html
+++ b/pos/index.html
@@ -39,6 +39,7 @@
 	}
 	</style>
 	<!-- Interface styles -->
+	<link type="text/css" rel="stylesheet" href="../menu.css">
 	<link type="text/css" rel="stylesheet" href="assets/jquery-ui-1.9.2.custom/css/no-theme/jquery-ui-1.9.2.custom.min.css">
 	<link type="text/css" rel="stylesheet" href="assets/apps/share/css/uniform.default.css">
 	<link type="text/css" rel="stylesheet" href="assets/apps/share/css/bootstrap.css">
@@ -61,7 +62,11 @@
 	class="branding-invision"
 	ng-class="bodyClass"
 	ng-style="bodyStyle">
-
+	<a class="back-link" href="../index.html">
+		<div class="back-button">
+			<img src="../assets/back-button.svg">
+		</div>
+	</a>
 
 	<!--
 		This is the initial loading sequence. We need to be able to display this BEFORE the AngularJS
