--- a/dc/index.html
+++ b/dc/index.html
@@ -6,6 +6,7 @@
 <html ng-app="InVision" ng-controller="AppController" inv-key-combos lang="en">
 <!--<![endif]-->
 <head>
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8" />
 	<title ng-bind="windowTitle">
 		InVision
