--- a/dc/index.html
+++ b/dc/index.html
@@ -63,12 +63,11 @@
 	class="branding-invision"
 	ng-class="bodyClass"
 	ng-style="bodyStyle">
-		<a class="back-link" href="../index.html">
-		<div class="back-button">
-			<img src="../assets/back-button.svg">
-		</div>
-	</a>
-
+    <a class="back-link" href="../index.html">
+        <div class="back-button">
+            ←&nbsp;&nbsp;Back to home 
+        </div>
+    </a>
 	<!--
 		This is the initial loading sequence. We need to be able to display this BEFORE the AngularJS
 		framework loads in order to give the user some sence of activity. But, when the framework kicks
