--- a/odd/index.html
+++ b/odd/index.html
@@ -12,7 +12,7 @@
 <body> 
     <a class="back-link" href="../index.html">
         <div class="back-button">
-            <img src="../assets/back-button.svg">
+            ←&nbsp;&nbsp;Back to home 
         </div>
     </a>
 
