--- a/or/index.html
+++ b/or/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body> 
-    <a class="back-link" href="../index.html">
-        <div class="back-button">
-            <img src="../assets/back-button.svg">
-        </div>
-    </a>
+        <a class="back-link" href="../index.html">
+            <div class="back-button">
+                ←&nbsp;&nbsp;Back to home 
+            </div>
+        </a>
 
     <video loop autoplay controls="true" width='100%' height='auto' src='test.mp4' type='video/mp4'></video>
 </body>
