--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <h1 style="margin: 30px;">View Our Solutions</h1>
         <div class="pod-container">
-            <a class="pod__link" href="dc/index.html">
+            <a class="pod__link" href="dc/dc.html">
                 <div class="pod">
                     <span class="pod__industry">Debt Consolidation</span>
                 </div>
@@ -42,7 +42,7 @@
                     <span class="pod__industry">Online Travel</span>
                 </div>
             </a>
-            <a class="pod__link" href="pos/index.html">
+            <a class="pod__link" href="pos/pos.html">
                 <div class="pod">
                     <span class="pod__industry">Point of Sale User Experience</span>
                 </div>
