--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <div class="content">
-        <h1 style="margin: 30px;">View Our Solutions</h1>
+        <h1 style="margin: 30px;">View Our Solutions:</h1>
         <div class="pod-container">
-            <a class="pod__link" href="dc/dc.html">
+            <!-- <a class="pod__link" href="dc/dc.html">
                 <div class="pod">
                     <span class="pod__industry">Debt Consolidation</span>
                 </div>
@@ -26,27 +26,32 @@
                 <div class="pod">
                     <span class="pod__industry">Incentives</span>
                 </div>
-            </a>
+            </a> -->
             <a class="pod__link" href="odd/index.html">
                 <div class="pod">
-                    <span class="pod__industry">On-Demand Delivery</span>
+                    <span class="pod__industry">Video 1</span>
                 </div>
             </a>
             <a class="pod__link" href="or/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Online Retail</span>
+                    <span class="pod__industry">Video 2</span>
                 </div>
             </a>
             <a class="pod__link" href="ota/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Online Travel</span>
+                    <span class="pod__industry">Video 3</span>
                 </div>
             </a>
-            <a class="pod__link" href="pos/pos.html">
+            <a class="pod__link" href="ota/index.html">
+                <div class="pod">
+                    <span class="pod__industry">Video 4</span>
+                </div>
+            </a>
+            <!-- <a class="pod__link" href="pos/pos.html">
                 <div class="pod">
                     <span class="pod__industry">Point of Sale User Experience</span>
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
 </body>
