--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
                     <span class="pod__industry">Incentives</span>
                 </div>
             </a> -->
-            <a class="pod__link" href="odd/index.html">
+            <a class="pod__link" href="billpay_vid/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Video 1</span>
+                    <span class="pod__industry">Bill Pay</span>
                 </div>
             </a>
-            <a class="pod__link" href="or/index.html">
+            <a class="pod__link" href="debtcon_vid/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Video 2</span>
+                    <span class="pod__industry">Debt Consolidation</span>
                 </div>
             </a>
-            <a class="pod__link" href="ota/index.html">
+            <a class="pod__link" href="pushcard_vid/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Video 3</span>
+                    <span class="pod__industry">Push to Card</span>
                 </div>
             </a>
-            <a class="pod__link" href="ota/index.html">
+            <a class="pod__link" href="pos_vid/index.html">
                 <div class="pod">
-                    <span class="pod__industry">Video 4</span>
+                    <span class="pod__industry">POS Financing</span>
                 </div>
             </a>
             <!-- <a class="pod__link" href="pos/pos.html">
